--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_HOST=db
-
+SERVICE_API_KEY="Zi9_p8gUaLUfUXzHH4WcW6ITjjRi9l2U4ZO37mvV0og"
 
 # OAuth Client (generated via create_oauth_app)
-OAUTH_CLIENT_ID=JqZGacrvNVSOgULedbz4vF2ZqmswRVRqk15XZc5u
+OAUTH_CLIENT_ID=6ggo89X5ZEUn9tFgnn5vF5doM0m0bJafU7gHJEGJ
 # OAUTH_CLIENT_SECRET not needed for public PKCE clients
 
 # React App URLs
