--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,28 @@
-# Python cache
+# Python
 __pycache__/
 *.pyc
 *.pyo
-
-# Virtual environment
+*.pyd
+*.sqlite3
+db.sqlite3
+.env
+venv/
 .venv/
-env/
 
 # Django
-*.log
-db.sqlite3
-/media
-/staticfiles
+media/
+staticfiles/
 
-# VSCode / IDE
+# React / Node
+node_modules/
+build/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE / OS
 .vscode/
 .idea/
+.DS_Store
+Thumbs.db
